# clear-browser

./: README.md
config/: args.gn  version.txt
patches/: series
patches/custom/: 0001-change-default-preferences.patch  0002-disable-default-feedback-extension.patch  0003-remove-compiler-unused-warning.patch  0004-disable-usb-service.patch  0005-disable-thread-watcher.patch  0006-add-noise-to-canvas.patch
patches/debian_buster/disable/: android.patch  fuzzers.patch  perfetto.patch
patches/inox-patchset/: 0009-disable-google-ipv6-probes.patch  0014-disable-translation-lang-fetch.patch
patches/privacy/: 0001-remove-safebrowsing-full.patch  0001-remove-safebrowsing-old.patch  0001-remove-safebrowsing-partial.patch  0001-remove-safebrowsing.patch  0002-remove-metric-histogram-logging.patch  0003-disable-anoymized-data-collection.patch  0004-disable-search-suggestion.patch  0005-disable-link-doctor.patch  0006-disable-rappor-uploading.patch  0007-prevent-canvas-document-fingerprint.patch
patches/ui/: 0001-adjust-top-chrome-style.patch  0003-custom-person-menu-macos.patch  0005-hide-avatar-toolbar-button.patch
patches/ungoogled-chromium/: default-to-https-scheme.patch  disable-download-quarantine.patch  disable-intranet-redirect-detector.patch  disable-mei-preload.patch  disable-translate.patch  disable-untraceable-urls.patch  disable-webgl-renderer-info.patch  disable-webrtc-log-uploader.patch  enable-paste-and-go-new-tab-button.patch  popups-to-tabs.patch
scripts/: build.py  set_quilt_vars.sh
utils/: set_quilt_vars.sh
